RESOLVED FIXED98520
Web Inspector: Semantically incorrect CSS rules result in broken source code data
https://bugs.webkit.org/show_bug.cgi?id=98520
Summary Web Inspector: Semantically incorrect CSS rules result in broken source code ...
Alexander Pavlov (apavlov)
Reported 2012-10-05 08:09:37 PDT
For example, an @import rule following a style rule results in inability to edit all following style rules through the model.
Attachments
Patch (5.19 KB, patch)
2012-10-05 09:37 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2012-10-05 09:37:04 PDT
Vsevolod Vlasov
Comment 2 2012-10-05 09:44:16 PDT
Comment on attachment 167338 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167338&action=review > Source/WebCore/css/CSSParser.cpp:10134 > + popRuleData(); Is this one tested?
Alexander Pavlov (apavlov)
Comment 3 2012-10-05 10:49:23 PDT
Comment on attachment 167338 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167338&action=review >> Source/WebCore/css/CSSParser.cpp:10134 >> + popRuleData(); > > Is this one tested? The "if (pageSelector)" check is extraneous - the grammar guarantees that we never get a NULL pageSelector. I added the call for consistency.
WebKit Review Bot
Comment 4 2012-10-10 03:50:12 PDT
Comment on attachment 167338 [details] Patch Clearing flags on attachment: 167338 Committed r130883: <http://trac.webkit.org/changeset/130883>
WebKit Review Bot
Comment 5 2012-10-10 03:50:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.