Web Inspector: Semantically incorrect CSS rules result in broken source code data https://bugs.webkit.org/show_bug.cgi?id=98520

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Pop and throw away rule data from the stack when data have been collected for a semantically invalid CSS rule
(which is not going to be created).

* css/CSSParser.cpp:
(WebCore::CSSParser::createImportRule):
(WebCore::CSSParser::createFontFaceRule):
(WebCore::CSSParser::createPageRule):
(WebCore::CSSParser::createRegionRule):

LayoutTests:

* inspector/styles/parse-stylesheet-errors-expected.txt:
* inspector/styles/parse-stylesheet-errors.html:


Canonical link: https://commits.webkit.org/116861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130883 268f45cc-cd09-0410-ab3c-d52691b4dbfc